[project]
name = "nocturna-trading-system"
version = "2.0.0"
description = "Enterprise-grade algorithmic trading backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (Flask patterns)
    "SIM108", # ternary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
"src/advanced/*" = ["N806"]  # ML convention: X, X_scaled, etc.
"src/core/risk_manager.py" = ["N806"]  # MIN_KELLY_TRADES constant

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # assert used in non-test code for guards

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py311"]
